--- a/ejercicios-hiit.html.twig
+++ b/ejercicios-hiit.html.twig
@@ -378,7 +378,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt="Ejercicios de abdominales donde quieras"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Practica esta modalidad dónde y cuándo quieras</h2>
