--- a/entrenador.html.twig
+++ b/entrenador.html.twig
@@ -163,7 +163,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
-                  <img src="/homes/img/iconos/play_icon.png" alt="" class="img-fluid play-btn">
+                  <img src="/homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
                   <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
                 </button>
 
@@ -199,7 +199,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row no-padding">
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="/homes/img/img-trainer/gym.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="/homes/img/img-trainer/gym.jpg" height="auto" width="100%" alt="Gimnasio online">                            
                         <figcaption class="cl-content">
                             <h2 class="px-5 mx-5 text-white display-4 text-uppercase">Entrena en el gimnasio</h2>
                             <p class="lead mt-5 px-5 text-white text-bigger">Entrenamiento personalizado adaptado a tus necesidades y objetivos.</p>
@@ -208,7 +208,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="/homes/img/img-trainer/running.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="/homes/img/img-trainer/running.jpg" height="auto" width="100%" alt="Entrenamiento online">                            
                         <figcaption class="cl-content">
                             <h2 class="px-5 mx-5 text-white display-4 text-uppercase">Corre como nunca</h2>
                             <p class="lead mt-5 px-5 text-white text-bigger">Desafía tus metas y mejora tus marcas en media marathon y marathon.</p>
