--- a/entrenamiento-aerobico.html.twig
+++ b/entrenamiento-aerobico.html.twig
@@ -396,7 +396,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/land-aerobic/graficos-y-estadisticas.jpg" class="img-fluid" alt="Ejercicios aeróbicos"></div>
+                    <div><img src="/homes/img/land-aerobic/graficos-y-estadisticas.jpg" class="img-fluid" alt="Gráficos y estadísticas"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">GRÁFICOS Y ESTADÍSTICAS CON TU EVOLUCIÓN</h2>
