--- a/nutricion.html.twig
+++ b/nutricion.html.twig
@@ -191,7 +191,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row no-padding">
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="/homes/img/img-nutrition/recetas.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="/homes/img/img-nutrition/recetas.jpg" height="auto" width="100%" alt="Recetas para entrenamiento">                            
                         <figcaption class="cl-content">
                             <h2 class="px-5 mx-5 text-white display-4 text-uppercase">Recetas</h2>
                             <p class="lead mt-5 px-5 text-white text-bigger">Recetas saludables fáciles de preparar explicadas paso a paso.</p>
@@ -200,7 +200,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="/homes/img/img-nutrition/batidos.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="/homes/img/img-nutrition/batidos.jpg" height="auto" width="100%" alt="Batidos nutricionales">                            
                         <figcaption class="cl-content">
                             <h2 class="px-5 mx-5 text-white display-4 text-uppercase">Batidos</h2>
                             <p class="lead mt-5 px-5 text-white text-bigger">Aprende a preparar batidos naturales de proteinas, energéticos, detox...</p>
