--- a/posturas-de-yoga.html.twig
+++ b/posturas-de-yoga.html.twig
@@ -379,7 +379,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt="Posturas de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">APRENDE A HACER LAS POSICIONES DE <a href="https://www.ictiva.com/ejercicios-yoga/" target="_blank" class="text-primary">YOGA</a> O ASANAS BÁSICAS</h2>
@@ -397,7 +397,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-yoga/yoga-profesora.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-yoga/yoga-profesora.jpg" class="img-fluid" alt="Monitora de yoga online"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">CONOCE LA PROFESORA QUE TE GUIARÁ DURANTE TODAS LAS <a href="https://www.ictiva.com/clases-yoga/" target="_blank" class="text-primary">CLASES DE YOGA ONLINE</a></h2>
@@ -430,7 +430,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/dietas/verduras.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/dietas/verduras.jpg" class="img-fluid" alt="La dieta tu mejor complemento"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">LA DIETA SERÁ TU MEJOR COMPLEMENTO</h2>
@@ -446,7 +446,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt="Ejercicios de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RECOMENDACIONES A TENER EN CUENTA ANTES DE HACER LAS POSTURAS DE YOGA</h2>
