--- a/rutina-de-ejercicios-de-abdominales.html.twig
+++ b/rutina-de-ejercicios-de-abdominales.html.twig
@@ -362,7 +362,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center justify-content-end">
-                    <div><img src="/homes/img/img-abdominales/abdominales1.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-abdominales/abdominales1.jpg" class="img-fluid" alt="Tonificar abdomen"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">QUIERES TONIFICAR Y QUITAR GRASA EN LA ZONA ABDOMINAL?</h2>
@@ -380,7 +380,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-abdominales/abdominales4.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-abdominales/abdominales4.jpg" class="img-fluid" alt="Rutina de ejercicios de abdominales"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RUTINA DE EJERCICIOS ABDOMINALES PASO A PASO</h2>
