--- a/yoga-para-principiantes.html.twig
+++ b/yoga-para-principiantes.html.twig
@@ -379,7 +379,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt="Posturas de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">APRENDER LAS <a href="https://www.ictiva.com/posturas-de-yoga/" class="text-primary">POSTURAS DE YOGA</a> PARA PRINCIPIANTES ES UN RETO MUY FÁCIL</h2>
@@ -397,7 +397,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-yoga/yoga-profesora.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-yoga/yoga-profesora.jpg" class="img-fluid" alt="Profesora de yoga online"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">DESCUBRE QUIÉN ES NUESTRA PROFESORA</h2>
@@ -431,7 +431,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/dietas/quinoa.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/dietas/quinoa.jpg" class="img-fluid" alt="Quinoa - Cuida tu cuerpo"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">LA NUTRICIÓN, UN ASPECTO ESENCIAL QUE TE AYUDA A CUIDAR EL CUERPO</h2>
@@ -447,7 +447,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt="Ejercicios de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RECOMENDACIONES A TENER EN CUENTA ANTES DE EMPEZAR TU ENTRENAMIENTO</h2>
