--- a/ejercicios-espalda.html.twig
+++ b/ejercicios-espalda.html.twig
@@ -379,7 +379,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-espalda/espalda_chica.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-espalda/espalda_chica.jpg" class="img-fluid" alt="Ejercicios de espalda para mujer"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Gracias a nuestros ejercicios de espalda en casa corregirás la postura</h2>
@@ -446,7 +446,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-espalda/espalda_chico.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-espalda/espalda_chico.jpg" class="img-fluid" alt="Ejercicios de espalda para hombre"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Recomendaciones generales a tener en cuenta</h2>
