--- a/ejercicios-fitness.html.twig
+++ b/ejercicios-fitness.html.twig
@@ -374,7 +374,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt="Videos de abdominales - ejercicios"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Los <a href="https://www.ictiva.com/ejercicios-en-casa/videos-fitness/" class="text-primary">vídeos de fitness</a> online para hacer en casa</h2>
@@ -407,7 +407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">                
                 <div class="col-12 col-md-5 text-left no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/land-aerobic/graficos-y-estadisticas.jpg" class="img-fluid" alt="Ejercicios aeróbicos"></div>
+                    <div><img src="/homes/img/land-aerobic/graficos-y-estadisticas.jpg" class="img-fluid" alt="Gráficos y estadísticas"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h3 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Los Gráficos con evolución para seguir tu progreso</h3>
