--- a/ejercicios-pilates.html.twig
+++ b/ejercicios-pilates.html.twig
@@ -379,7 +379,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-pilates/pilates1.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-pilates/pilates1.jpg" class="img-fluid" alt="Videos de Pilates en casa"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-pilates/" class="text-primary">VIDEOS DE PILATES EN CASA</a></h2>
@@ -397,7 +397,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-pilates/pilates2.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-pilates/pilates2.jpg" class="img-fluid" alt="Clases de Pilates online"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left"><a href="https://www.ictiva.com/clases-pilates/" class="text-primary">CLASES DE PILATES ONLINE</a></h2>
@@ -449,7 +449,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-pilates/pilates3.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-pilates/pilates3.jpg" class="img-fluid" alt="Pilates online"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RECOMENDACIONES</h2>
