--- a/ejercicios-yoga.html.twig
+++ b/ejercicios-yoga.html.twig
@@ -376,7 +376,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt="Clases de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary"><a href="https://www.ictiva.com/clases-yoga/" target="_blank" class="text-primary">CLASES DE YOGA</a> ONLINE</h2>
@@ -394,7 +394,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt="Posturas de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary"><a href="https://www.ictiva.com/posturas-de-yoga/" target="_blank" class="text-primary">POSTURAS DE YOGA</a> PARA HACER EN CASA</h2>
@@ -410,7 +410,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/ictiva-mockup.png" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/ictiva-mockup.png" class="img-fluid" alt="la App de ictiva"></div>
 
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
@@ -443,7 +443,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt="Ejercicios de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RECOMENDACIONES</h2>
