--- a/yoga-para-embarazadas.html.twig
+++ b/yoga-para-embarazadas.html.twig
@@ -377,7 +377,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/dietas/quinoa.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/dietas/quinoa.jpg" class="img-fluid" alt="Quinoa - Cuida tu nutrición con una dieta de ictiva"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Cuida tu nutrición con una dieta de ictiva</h2>
@@ -429,7 +429,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/land-aerobic/comunidad-min.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/land-aerobic/comunidad-min.jpg" class="img-fluid" alt="Comunidad ictiva"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Únete a nuestra comunidad en las redes sociales</h2>
@@ -445,7 +445,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt="Ejercicios de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Recomendaciones antes de hacer <a href="https://www.ictiva.com/" target="_blank" class="text-primary">ejercicios en casa</a></h2>
