--- a/gimnasio-virtual.html.twig
+++ b/gimnasio-virtual.html.twig
@@ -276,7 +276,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white text-medium mb-5">Planes de entrenamiento, Entrenador virtual, Dietas y mucho más!</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">PONTE EN FORMA CON NUESTRO GIMNASIO VIRTUAL</h2>
                     <p class="text-white text-medium mb-5">Más de 800 rutinas de ejercicios a través de videosesiones en tiempo real, para llevar a cabo una vida activa y saludable. Hoy es el día para empezar el cambio!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href=" class="text-uppercase text-white text-center m-0 py-4 px-2 px-sm-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-2 px-sm-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -394,7 +394,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Estas dietas constan de 5 comidas diarias (desayuno, almuerzo, comida, merienda y cena) y están confeccionadas por objetivos: Perder peso, ganar masa muscular, mantenimiento y también están disponibles  para veganos, vegetarianos, ovolactovegetarianos.</p>
                     <p class="mb-3 ls text-medium">También dispones de un apartado de recetas saludables por si alguna de las comidas que te proponemos en la dieta no te gusta y quieres sustituirla.</p>
                     <p class="mb-3 ls text-medium">Tanto las dietas como las recetas, son muy fáciles de seguir y todas van con su información nutricional.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -412,7 +412,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">A la finalización de cada sesión te dará también una puntuación por cada vídeo realizadao de forma completa. Estas sesiones tienen puntos extras a modo de medallas. Todas estas acciones las puedes  compartir en RRSS lo que genera más puntos en tu casillero.</p>
                     <p class="mb-3 ls text-medium">Los 3 primeros clasificados de cada mes, tienen premio asegurado, al igual que los ganadores de cada trimestre. Puedes a ganar un viaje de fin de semana a una ciudad europea!</p>
                     <p class="mb-3 ls text-medium">Podrás ver todo el sistema de puntuación como funciona, los puntos que has conseguido y las clasificaciones, dentro del apartado “Motivator”</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -429,7 +429,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Gracias a la app de ejercicios gym virtual de ictiva, podrás llevarte tu entrenamiento allí donde quieras y empezar a llevar una vida saludable. Tu eliges el momento del día y el lugar y  nosotros te damos la clase. Así de fácil!</p>
                     <p class="mb-3 ls text-medium">La aplicación de ictiva, gracias a su variedad de disciplinas (25) y sus más de 800 videosesiones, así como sus rutinas o dietas, hace de ella la app de salud y bienestar más completa que hay en el mercado.</p>
                     <p class="mb-3 ls text-medium">A qué esperas a empezar? Tienes más de 50 clases gratis de ejercicios en nuestro gym virtual, que están a tu disposición. Prueba las salas de ejercicio que más te gusten</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -446,7 +446,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Comparte tu experiencia con otros miembros, pregunta sobre las dudas que tengas, sigue nuestros blogs para estar informad@ sobre todo tema relacionado con la salud, el bienestar y la práctica deportiva. Recibe comunicaciones con contenido de valor que te motivará y te ayudará a seguir adelante en la consecución de tus objetivos.</p>
                     <p class="mb-3 ls text-medium">Y, ahora como novedad, te puedes unir como miembro a un grupo específico de Facebook : Usuarios que quieran tonificar y definir su cuerpo, aquellos que quieren tener un peso adecuado quemando calorías y los que están más interesados en actividades más calmadas como pueden ser el yoga o el pilates (Wellness).</p>
                     <p class="mb-3 ls text-medium">Vamos, no lo dudes, únete a uno de estos grupos y mantente más informad@ y motivad@ con lo que más te interesa a la vez que interactúas con usuarios que tienen tu misma meta.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
