--- a/clases-yoga.html.twig
+++ b/clases-yoga.html.twig
@@ -255,7 +255,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -274,7 +274,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Iníciate en el mundo del Yoga con nuestras clases virtuales.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Clases de Yoga online.</h2>
                     <p class="text-white text-medium mb-5">Con nuestras clases de Yoga en casa de ictiva, aprenderás a realizar desde ejercicios básicos a asanas más avanzadas. Cuida tu cuerpo y tu mente.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -366,7 +366,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Tanto si eres principiante en esta disciplina, como si tienes un nivel más avanzado tenemos clases para tí que te ayudarán a mejorar tanto a nivel físico: (mayor flexibilidad, mejora del tono muscular, pérdida de peso),  como a nivel mental: (reduce el estrés diario, recarga tu energía, aumenta tu estabilidad emocional).</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>No lo dudes y empieza a realizar nuestras clases de yoga completas y sé más feliz. Saca el Yogui que llevas dentro y pásate a una vida más saludable.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -384,7 +384,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>A través de todas estas clases de yoga para hacer en casa, te mostraremos cómo empezar poco a poco a través de las posturas más básicas y cómo mejorar paso a paso tanto a nivel físico como mental, llegando a unir cuerpo y mente.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Ya sea desde la comodidad de tu hogar o de algún lugar que te motive (playa, bosque, parque, etc..), con nuestras clases de Yoga online encontrarás esa paz interior que todo el mundo busca. No lo dudes, empieza hoy mismo a cuidar de ti, practicando nuestras clases de <a href="https://www.ictiva.com/yoga-para-principiantes/" target="_blank" class="text-primary">yoga para principiantes</a> online hasta clases más avanzadas.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -401,7 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Pero no solo de asanas tratan nuestras sesiones. También aprenderás sobre un conjunto de técnicas de respiración denominadas Pranayamas, cuyo objetivo es controlar la energía vital de nuestro cuerpo y nuestra mente, para sobrellevar la rutina diaria mucho mejor.</p>
                     <p class="mb-3 ls text-medium">Y por último, descubrirás técnicas de meditación con el fin de concentrarnos en nosotros mismos para poder ir más allá de nuestra mente y saber desconectar del estrés que supone a veces la vida.</p>
                     <p class="mb-3 ls text-medium">Solo la práctica diaria y la perseverancia constante te llevará a encontrarte con tu yo interior. Empieza a ser un Yogui hoy mismo!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -420,7 +420,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Pero la aplicación de ictiva no solo te permite realizar esta disciplina, sino que tienes muchas otras más que pueden complementar tus clases de yoga en casa, como son el Pilates, la gimnasia hipopresiva, los estiramientos y relajación y los ejercicios para fortalecer la espalda, y muchas más! Descúbrelas</p>
                     <p class="mb-3 ls text-medium">La app de ictiva, gracias a su variedad de disciplinas (25) y sus más de 800 videosesiones, y diversas rutinas de entrenamiento con planes nutricionales incluidos, hace de ella la aplicación de salud y bienestar más completa del mercado.</p>
                     <p class="mb-3 ls text-medium">A qué esperas a descargártela? Tienes más de 50 clases gratis!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -436,7 +436,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Rosa Mº Madrid es la monitora que te introducirá en la práctica del Yoga. A sus espaldas tiene una gran experiencia de varios años, siendo instructora de esta disciplina milenaria y la avalan como profesora diferentes centros oficiales. Actualmente sigue en activa impartiendo clases en sus propio centro.</p>
                     <p class="mb-3 ls text-medium">Gracias al bagaje y experiencia, nuestra monitora te explicará al detalle todas las sesiones virtuales. Como si se tratara de un centro presencial, te sentirás acompañad@ en todo momento, como si estuviera presente en el espacio que practiques tus clases de yoga online, donde te explicará paso a paso como colocar cada parte de tu cuerpo, para que realices correctamente las asanas y evites lesiones.</p>
                     <p class="mb-3 ls text-medium">Con Rosa María Madrid realizar nuestras videosesiones te será muy sencillo. Desarrollarás capacidad de concentración, armonía corporal, aprenderás las técnicas de respiración y todas las asanas para que tomes consciencia de tu mente y tu cuerpo.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -452,7 +452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Es de vital importancia que sigas una serie de recomendaciones para iniciarte en el Yoga. La respiración es muy importante en esta disciplina y sirve como medio para lograr la concentración y dejar a un lado los pensamientos. Préstale atención para poder ir avanzando en la práctica.</p>
                     <p class="mb-3 ls text-medium">Sigue los consejos de nuestra profesora Rosa María Madrid, en todas las asanas para acabar las clases habiendo adquirido todos los conocimientos y los beneficios que te proporciona esta disciplina. Con sus recomendaciones, prepararás tu cuerpo paulatinamente, evitarás lesiones y disfrutarás de cada avance.</p>
                     <p class="mb-3 ls text-medium">Es de vital importancia que no quieras ir deprisa y que disfrutes de cada movimiento, con lo que aconsejamos repetir cada clase todas las veces que sean necesarias hasta que queden asumidos correctamente todos los ejercicios . Asana por asana descubrirás una nueva forma de movimiento, de sentir y, con paciencia, descubrirás no sólo una forma de ejercitarte y verte mejor por fuera sino, que a su vez, descubrirás un modo de quererte y equilibrarte a nivel interno.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
