--- a/hiit.html.twig
+++ b/hiit.html.twig
@@ -265,7 +265,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -284,7 +284,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">¡Nunca fue tan fácil ponerse en forma  gracias a ictiva! Te atreves con el reto?</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Hiit en casa:  Tu Entrenamiento de Alta Intensidad</h2>
                     <p class="text-white text-medium mb-5">Lleva a tu cuerpo a otro nivel empezando hoy mismo!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -374,7 +374,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Esto quiere decir que vamos a mezclar repeticiones cortas de ejercicios cardiovasculares a un nivel muy intenso con repeticiones cortas también de intensidad moderada o baja. Así, vamos a aumentar la resistencia aeróbica y anaeróbica del cuerpo, ya que al hacer el máximo número de repeticiones posibles en un periodo corto de tiempo vamos a acelerar el metabolismo y nos hará quemar más calorías. Consiguiendo perder peso rápidamente a la vez que tonificamos los músculos.</p>
                     <p class="mb-3 ls text-medium">Es por esto que el Hiit en casa resulta un modo de entrenamiento ideal para aquellos que dispongan de poco tiempo pero que quieren sacarle el máximo partido posible y obtener un cuerpo escultural.</p>
                     <p class="mb-3 ls text-medium">Déjate sorprender y descubre como hacer las clases, ganar resistencia y quemar grasa con los <a href="https://www.ictiva.com/" class="text-primary">ejercicios en casa</a> de ictiva</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -391,7 +391,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Por ejemplo, el ejercicio Espartano, en poco más de 9 minutos nos va a permitir quemar nada más y nada menos que 120 calorías. Consiste en realizar una primera parte dónde nos vamos a colocar de pie detrás de una silla, cogiéndola con las dos manos para mantener el equilibrio y moviendo una de las dos piernas hacia atrás.</p>
                     <p class="mb-3 ls text-medium">La segunda parte del ejercicio se realiza sin la silla y se trata de separar las piernas y flexionarlas ligeramente (como si hiciéramos una sentadilla) con las manos vamos a hacer como si quisiéramos separar las piernas pero con las piernas haremos fuerza hacia dentro para impedir que se separen. A continuación volveremos a hacer la parte de la silla con la otra pierna.</p>
                     <p class="mb-3 ls text-medium">¿Notáis ya como trabajan vuestros músculos?</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -408,7 +408,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Pero no te preocupes, en ictiva hemos pensado en todo y tenemos una serie de ejercicios de hiit para principiantes con los que podréis coger el ritmo rápidamente. Así, verás tres categorías, básico, medio y avanzado. En las primeras categorías encontrarás ejercicios de poca duración con los que os iréis adaptando progresivamente a este tipo de entrenamiento hasta llegar al nivel más avanzado con rutinas completas de hasta 20 minutos.</p>
                     <p class="mb-3 ls text-medium">Al tratarse de unos ejercicios tan intensos, es muy importante respetar los días de entrenamiento y dejar que el cuerpo descanse los días que le tocan para no sobrecargarlo y evitar posibles lesiones.</p>
                     <p class="mb-3 ls text-medium">No te preocupes porque en todos los vídeos hiit que realices nuestros entrenadores te van a explicar como hacerlos de la forma correcta y con la postura adecuada.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -424,7 +424,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para poder entrenar en casa no necesitas ni de grandes espacios ni de material voluminoso. Ya que con unos pocos metros (un espacio de 2 x 2 metros por ejemplo) que te permita moverte libremente sin chocar con ningún mueble es suficiente. En cuanto al material, el hiit training es una de las mejores disciplinas para realizar en casa sin tener que utilizar mucho material, como mucho unas pesas pequeñas, una esterilla para hacer los ejercicios en el suelo o una silla para poder usarla como soporte. Aunque en la mayoría de casos usaremos nuestro propio cuerpo para hacer los levantamientos de peso.</p>
                     <p class="mb-3 ls text-medium">Como en este deporte hay que ir progresando poco a poco. Nuestros entrenadores han preparado un calendario con las sesiones de entrenamiento para que te sean fáciles de realizar en casa. Si los sigues con constancia, en algunas sesiones notarás los cambios tu vuestro cuerpo.</p>
                     <p class="mb-3 ls text-medium">Podemos empezar, por ejemplo, haciendo tres clases a la semana de 20 minutos cada una con un día de descanso entre cada sesión. Para que el cuerpo pueda recuperarse como es debido. Poco a poco, y a medida que te vayas acostumbrando, puedes ir aumentando progresivamente el tiempo de duración de cada sesión y los días que entrenas a la semana.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -441,7 +441,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Nuestra aplicación es una de las más completas, ya que no solamente permite acceder a más de 50 videos gratuitos par que puedas realizar tus clases preferidas. Si no que también contamos con más de 800 vídeo-sesiones completas de 21 disciplinas diferentes, además del hiit.</p>
                     <p class="mb-3 ls text-medium">Pero también podrás hacer un seguimiento de tu evolución y de tus sesiones gracias a los gráficos y a las estadísticas que muestran los cambios de tu IMC, peso corporal, calorías consumidas, tiempo de actividad realizado, información muy útil para asegurarte que vas por buen camino con tu entrenamiento.</p>
                     <p class="mb-3 ls text-medium">Gracias a la app llevarás el gimnasio en tu móvil. ¡Ya no hay excusa que valga para que saltarte los <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8" class="text-primary">Ejercicios hiit</a>! Puedes descargar la aplicación gratuita en la tienda de Apple Store o de Google Play y decidir cuándo será tu siguiente clase deportiva.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -459,7 +459,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Es muy importante, empezar siempre de forma gradual, para que los músculos se abitúen a realizar cierto tipo de movimientos que hasta ahora no habían realizado o que no estaban acostumbrados a realizar con tanta regularidad.</p>
                     <p class="mb-3 ls text-medium">Además, recordamos que hay que seguir las instrucciones de los profesionales que nos explican en cada vídeo, de forma muy detallada, cómo realizar cada ejercicio, para poder ejecutarlo de la forma correcta. El cumplimiento de dichas instrucciones, es bajo tu propia responsabilidad.</p>
                     <p class="mb-3 ls text-medium">El gasto de las calorías que vais a quemar durante la realización de estos Ejercicios hiit es aproximativo. En ictiva no nos hacemos responsables del mal uso de nuestra plataforma y no garantizamos los resultados.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
